--- a/packages/admin-dashboard/src/locales/pl/table.json
+++ b/packages/admin-dashboard/src/locales/pl/table.json
@@ -24,14 +24,14 @@
         "active": "Aktywny",
         "additionalInformation": "Dodatkowe informacje",
         "code": "Kod",
-        "createdAt": "Utworzony w",
+        "createdAt": "Utworzona w",
         "currencyCode": "Kod waluty",
         "customerLastName": "Nazwisko klienta",
         "id": "Id",
         "orderPlacedAt": "Zamówienie złożone pod adresem",
         "shipping": "Wysyłka",
         "shippingWithTax": "Wysyłka z podatkiem",
-        "state": "Stan",
+        "state": "Państwo",
         "subTotal": "Suma cząstkowa",
         "subTotalWithTax": "Suma częściowa z podatkiem",
         "token": "Token",
@@ -69,16 +69,16 @@
     "buttons": {
         "add": "Dodaj",
         "apply": "Zastosuj",
-        "create": "Utwórz",
+        "create": "Create",
         "reset": "Reset",
-        "cancel": "Anuluj"
+        "cancel": "Cancel"
     },
     "operators": {
         "eq": "Równa się",
         "in": "W",
         "notIn": "Nie w",
         "isNull": "Is null",
-        "notEq": "Nie jest równa",
+        "notEq": "Nie równy",
         "contains": "Zawiera",
         "notContains": "Nie zawiera",
         "before": "Przed",
@@ -97,12 +97,12 @@
     },
     "columns": {
         "id": "ID",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Created at",
+        "updatedAt": "Updated at",
         "featuredAsset": "Aktywa",
-        "name": "Nazwa",
-        "slug": "Ślimak",
-        "enabled": "Włączony",
+        "name": "Name",
+        "slug": "Slug",
+        "enabled": "Enabled",
         "sku": "SKU",
         "price": "Cena",
         "priceWithTax": "Cena z podatkiem"
