--- a/packages/admin-dashboard/src/locales/pl/collections.json
+++ b/packages/admin-dashboard/src/locales/pl/collections.json
@@ -1,17 +1,17 @@
 {
     "create": "Utwórz kolekcję",
-    "edit": "Edycja kolekcji",
+    "edit": "Edytuj kolekcję",
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "baseInfoUpdated": "Aktualizacja: {{value}}",
     "table": {
         "id": "Id",
         "name": "Nazwa",
         "isPrivate": "Prywatny",
         "subCollections": "Kolekcje",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "columns": "Kolumny",
         "featuredAsset": "Obraz",
         "breadcrumb": "Breadcrumb",
@@ -26,8 +26,8 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Nazwa",
-            "slug": "Ślimak",
+            "name": "Name",
+            "slug": "Slug",
             "isPrivate": "Jest prywatny",
             "description": "Opis"
         },
@@ -44,7 +44,7 @@
     },
     "visibility": {
         "public": "Publiczny",
-        "private": "Prywatny"
+        "private": "Private"
     },
     "toasts": {
         "collectionLoadingError": "Nie udało się załadować kolekcji o id {{value}}",
@@ -54,23 +54,23 @@
         "collectionCreatedError": "Nie udało się utworzyć kolekcji",
         "collectionDeleteSuccess": "Kolekcja została pomyślnie usunięta",
         "collectionDeleteError": "Nie udało się usunąć kolekcji",
-        "deletionCollectionErrorToast": "Nie udało się usunąć kolekcji",
+        "deletionCollectionErrorToast": "Failed to delete collection",
         "deletionCollectionSuccessToast": "Kolekcje zostały pomyślnie usunięte",
         "noCollectionChildrens": "kolekcja {{collection}} nie ma żadnych dzieci"
     },
     "deleteCollection": {
-        "title": "Usuń kolekcję",
+        "title": "Delete collection",
         "description": "Czy na pewno chcesz usunąć tę kolekcję?",
         "successMessage": "Kolekcja została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj wybrane"
+        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     },
-    "editCollection": "Edytuj kolekcję",
+    "editCollection": "Edit collection",
     "withSelected": "Z wybranym {{collections}}",
-    "columns": "Kolumny",
+    "columns": "Columns",
     "rowsSelected": "{{selected}} z {{all}} wybranych wierszy",
     "duplicateCollection": "Na pewno chcesz zduplikować te kolekcje?",
     "collectionActions": {
-        "move": "Przeprowadzka",
+        "move": "Przenieś",
         "copy": "Duplikat",
         "assign": "Przypisz do kanału",
         "deleteFromChannel": "Usuń z bieżącego kanału"
@@ -95,8 +95,8 @@
         }
     },
     "deleteCollectionDialog": {
-        "button": "Usuń kolekcję",
-        "title": "Czy na pewno?",
+        "button": "Delete collection",
+        "title": "Jesteś pewien?",
         "description": "Kolekcja zostanie trwale usunięta.",
         "confirm": "Usuń kolekcję",
         "cancel": "Anuluj"
@@ -104,13 +104,13 @@
     "deleteCollectionsFromChannel": {
         "areYouSure": "Czy na pewno chcesz usunąć te kolekcje z {{ channel }} ?",
         "removeCollection": "Usuń kolekcję",
-        "cancel": "Anuluj",
+        "cancel": "Cancel",
         "removeSuccess": "Kolekcje usunięte",
         "removeError": "Nie można usunąć kolekcji z kanału"
     },
     "moveCollectionsToChannels": {
-        "moveCollections": "Przenieś kolekcje",
-        "move": "Przenieś",
+        "moveCollections": "Przenoszenie kolekcji",
+        "move": "Move",
         "selected": "Wybrany",
         "availableChannels": "Dostępne kanały",
         "searchByCode": "Szukaj według kodu",
@@ -127,12 +127,12 @@
     "moveCollectionsToCollections": {
         "targetCollection": "Kolekcja docelowa",
         "searchByName": "Wyszukiwanie według nazwy...",
-        "move": "Przenieś",
-        "selected": "Wybrany",
-        "moveCollections": "Przenoszenie kolekcji",
-        "movedAllCollections": "Przeniesiono wszystkie kolekcje",
-        "movedPartOfCollections": "Przeniesiono część kolekcji",
-        "moveError": "Nie można przenieść kolekcji"
+        "move": "Move",
+        "selected": "Selected",
+        "moveCollections": "Move collections",
+        "movedAllCollections": "Moved all collections",
+        "movedPartOfCollections": "Moved part of collections",
+        "moveError": "Couldn't move collections"
     },
     "errors": {
         "generic": "Coś było nie tak",
