--- a/packages/admin-dashboard/src/locales/pl/taxCategories.json
+++ b/packages/admin-dashboard/src/locales/pl/taxCategories.json
@@ -4,13 +4,13 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "baseInfoUpdated": "Aktualizacja: {{value}}",
     "table": {
         "id": "Id",
         "name": "Nazwa",
         "isDefault": "Jest domyślna",
-        "createdAt": "Utworzony w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewTaxCategory": "Wyświetl kategorię podatkową",
@@ -19,7 +19,7 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Nazwa",
+            "name": "Name",
             "isDefault": "Domyślna"
         }
     },
@@ -37,6 +37,6 @@
         "title": "Usuń kategorię podatkową",
         "description": "Czy na pewno chcesz usunąć tę kategorię podatkową?",
         "successMessage": "Kategoria podatkowa została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj wybrane"
+        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     }
 }
