--- a/packages/admin-dashboard/src/locales/pl/taxRates.json
+++ b/packages/admin-dashboard/src/locales/pl/taxRates.json
@@ -4,17 +4,17 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "baseInfoUpdated": "Aktualizacja: {{value}}",
     "table": {
         "id": "Id",
         "name": "Nazwa",
-        "enabled": "Włączony",
+        "enabled": "Włączone",
         "taxCategory": "Kategoria podatkowa",
         "zone": "Strefa",
         "value": "Stawka",
         "customerGroup": "Grupa klientów",
         "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewTaxRate": "Wyświetl stawkę podatku",
@@ -23,10 +23,10 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Nazwa",
-            "enabled": "Włączony",
-            "taxCategory": "Kategoria podatkowa",
-            "zone": "Strefa",
+            "name": "Name",
+            "enabled": "Enabled",
+            "taxCategory": "Tax category",
+            "zone": "Zone",
             "value": "Wartość"
         }
     },
@@ -43,6 +43,6 @@
         "title": "Usuń stawkę podatku",
         "description": "Czy na pewno chcesz usunąć tę stawkę podatku?",
         "successMessage": "Stawka podatku została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj wybrane"
+        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     }
 }
