--- a/packages/admin-dashboard/src/locales/pl/zones.json
+++ b/packages/admin-dashboard/src/locales/pl/zones.json
@@ -4,13 +4,13 @@
     "baseInfoCode": "Kod: {{value}}",
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
-    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "baseInfoUpdated": "Aktualizacja: {{value}}",
     "table": {
         "id": "Id",
         "name": "Nazwa",
         "members": "Członkowie",
-        "createdAt": "Utworzono w",
-        "updatedAt": "Zaktualizowano w",
+        "createdAt": "Utworzona w",
+        "updatedAt": "Zaktualizowano o",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewZone": "Wyświetl strefę",
@@ -19,8 +19,8 @@
     "details": {
         "basic": {
             "title": "Podstawowe informacje",
-            "name": "Nazwa",
-            "members": "Członkowie",
+            "name": "Name",
+            "members": "Members",
             "memberPlaceholder": "Dodaj członka"
         }
     },
@@ -37,6 +37,6 @@
         "title": "Usuń strefę",
         "description": "Czy na pewno chcesz usunąć tę strefę?",
         "successMessage": "Strefa została usunięta.",
-        "deleteOrCancel": "Usuń/Anuluj wybrane"
+        "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     }
 }
